# src/swagger/swagger.json
@@ -96,7 +96,6 @@
 					"postalCode",
 					"address",
 					"contact",
-					"deliveryRequest",
 					"orderItems",
 					"deliveryFee",
 					"totalPrice"
@@ -550,7 +549,7 @@
 				"operationId": "CreateCategory",
 				"responses": {
 					"204": {
-						"description": "No content"
+						"description": "카테고리가 성공적으로 생성되었습니다."
 					},
 					"409": {
 						"description": "이미 존재하는 카테고리입니다.",
@@ -573,6 +572,7 @@
 						}
 					}
 				},
+				"description": "새 카테고리를 생성합니다.\n이 메소드는 오버헤드를 줄이기 위해 성공 시 '204 No Content' 상태 코드를 반환합니다.\n'204 No Content'는 요청이 성공적으로 처리되었으나 클라이언트에 전송할 추가 콘텐츠가 없음을 나타냅니다.",
 				"tags": [
 					"Category"
 				],
@@ -585,11 +585,13 @@
 				],
 				"parameters": [],
 				"requestBody": {
+					"description": "생성할 카테고리에 대한 데이터를 담은 DTO",
 					"required": true,
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/CategoryDTO"
+								"$ref": "#/components/schemas/CategoryDTO",
+								"description": "생성할 카테고리에 대한 데이터를 담은 DTO"
 							}
 						}
 					}
@@ -755,6 +757,7 @@
 						}
 					}
 				},
+				"description": "주문을 생성합니다.\n이 메소드는 오버헤드를 줄이기 위해 성공 시 '204 No Content' 상태 코드를 반환합니다.\n'204 No Content'는 요청이 성공적으로 처리되었으나 클라이언트에 전송할 추가 콘텐츠가 없음을 나타냅니다.",
 				"tags": [
 					"Order"
 				],
@@ -765,11 +768,13 @@
 				],
 				"parameters": [],
 				"requestBody": {
+					"description": "생성할 주문에 대한 데이터를 담은 DTO",
 					"required": true,
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/CreateOrder"
+								"$ref": "#/components/schemas/CreateOrder",
+								"description": "생성할 주문에 대한 데이터를 담은 DTO"
 							}
 						}
 					}
@@ -1290,6 +1295,7 @@
 						}
 					}
 				},
+				"description": "제품을 생성합니다.\n이 메소드는 오버헤드를 줄이기 위해 성공 시 '204 No Content' 상태 코드를 반환합니다.\n'204 No Content'는 요청이 성공적으로 처리되었으나 클라이언트에 전송할 추가 콘텐츠가 없음을 나타냅니다.",
 				"tags": [
 					"Product"
 				],
@@ -1302,11 +1308,13 @@
 				],
 				"parameters": [],
 				"requestBody": {
+					"description": "생성할 제품에 대한 데이터를 담은 DTO",
 					"required": true,
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/ProductDTO"
+								"$ref": "#/components/schemas/ProductDTO",
+								"description": "생성할 제품에 대한 데이터를 담은 DTO"
 							}
 						}
 					}
@@ -1634,17 +1642,20 @@
 						}
 					}
 				},
+				"description": "유저를 생성합니다.\n이 메소드는 오버헤드를 줄이기 위해 성공 시 '204 No Content' 상태 코드를 반환합니다.\n'204 No Content'는 요청이 성공적으로 처리되었으나 클라이언트에 전송할 추가 콘텐츠가 없음을 나타냅니다.",
 				"tags": [
 					"User"
 				],
 				"security": [],
 				"parameters": [],
 				"requestBody": {
+					"description": "생성할 유저에 대한 데이터를 담은 DTO",
 					"required": true,
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/CreateUser"
+								"$ref": "#/components/schemas/CreateUser",
+								"description": "생성할 유저에 대한 데이터를 담은 DTO"
 							}
 						}
 					}
